2008-11-09 Borut Razem <borut.razem AT siol.net>

	* lib/ports.mk: commented out ports/i186.mk and ports/tlcs900h.mk
	  to remove "configure: WARNING: unrecognized options:
	  --disable-i186-port, --disable-tlcs900h-port"

2008-09-23 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk:
	  new SF web server sdcc-builder,sdcc@web.sourceforge.net

2008-03-31 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html - 2nd try

2008-03-24 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html

2008-03-16 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: rename COPYING.TX to COPYING.txt

2008-03-10 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: include ChangeLog into the doc archive

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: TARGETCC = "/Xcode2.5/usr/bin/gcc"
	  TARGETCXX = "/Xcode2.5/usr/bin/g++"

2008-02-20 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 2.5; binaries generated with Xcode 3.0 seems not to be
	  backward compatible with Mac OS X 10.4 and older

2008-02-14 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 3.0

2008-01-13 Borut Razem <borut.razem AT siol.net>

	* Makefile, lib/bootstrap.mk, lib/variables.mk, lib/version.mk:
	  added version.mk, introduced variables SDCC_VER_MAJOR,
	  SDCC_VER_MINOR, SDCC_VER_DEVEL, SDCCREVISION renamed to
	  SDCC_REVISION

2007-10-27 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: test-mcs51 replaced with test-mcs51-small in
	  REGTESTTARGETS

2007-10-05 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/bootstrap.mk: the default definition of BUILDNAME,
	  TARBALLBASE and TARBALLDIR moved from bootstrap.mk to variables.mk, so
	  that they can be redefined by local settings. Introduced TRAGET_PLATFORM